tests/instantiating/range_prop_empty_list/stderr.golden
error: empty 'range' property value list
bus.fbd +2:20
   |
 2 | 	C config; range = []
   | 	                  ^^
